# PolyLLM

./: .gitignore  Cargo.toml  README.md  plan.md
distill/: conv_distill.ipynb  conv_distill.py
inference-rust/src/: main.rs
src/: chat_service.rs  device_manager.rs  inference_service.rs  main.rs  model_service.rs  tokenizer_service.rs
